# bkrecomp-coop

./: .gitignore  .gitmodules  README.md  common.mk  mod.toml  project.py  temp_head.cpp  temp_lib_net_head.cpp  vcpkg.json
include/extlib/: lib_recomp.hpp
include/mod/: bkrecomp_api.h  ui_context.h  util.h
include/mod/blob/: blob_sender.h
include/mod/console/: console.h
include/mod/handlers/: collection_handlers.h  player_handlers.h  savedata_handlers.h  status_handlers.h
include/mod/hooks/: game_hooks.h
include/mod/network/: coop_network.h
include/mod/player_list/: player_list.h  player_list_ui.h
include/mod/teleport/: coop_teleport.h
offline_build/: mod_recomp.h
server/: Cargo.toml  README.md  build.bat  config.toml  start.bat
server/src/: config.rs  lobby.rs  main.rs  network.rs  packets.rs  player.rs  protocol.rs  state.rs
src/: always_tumble_jump.c
src/extlib/: CMakeLists.txt  console_input.cpp  console_input.h  debug_log.h  lib_main.cpp  lib_message_queue.cpp  lib_message_queue.h  lib_net.cpp  lib_net.h  lib_packets.h  lib_packets.hpp
src/extlib/util/: util.cpp  util.h
src/mod/: coop_init.c  libc_utils.c  ui_context.c
src/mod/blob/: blob_sender.c
src/mod/collection/: collection.c  collection.h
src/mod/console/: console.c
src/mod/handlers/: collection_handlers.c  player_handlers.c  savedata_handlers.c  status_handlers.c
src/mod/hooks/: game_hooks.c
src/mod/message_queue/: coop_messages.c  coop_messages.h  (+2 more)
test_env/mods/: bk_recomp_mod_template.nrm  bkrecomp_coop.nrm  bkrecomp_coop_extlib.dylib
thunderstore_info/: README.md
(+20 files in other folders)
