[package]
name = "bkrecomp-coop-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
chrono = "0.4"
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
